Correccion de errores de ortografia y mas

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -48,12 +48,12 @@
         </nav>
     </header>
     <main>
-        <h2>Catalogo</h2>
+        <h2 class="titulo-cata">Catalogo</h2>
         <section class="contenido">
-            <div>
+            <div class="article-container">
                 <img class="img-catalogo" src="../img/tv.png" alt="smart tv">
-                <h6>Componentes</h6>
-                <ul>
+                <h6 class="compos">Componentes</h6>
+                <ul class="licontainer">
                     <li>
                         Resolución full HD
                     </li>
@@ -68,11 +68,13 @@
                     </li>
                 </ul>
                 <button class="boton-catalogo">Comprar</button>
+
+                
             </div>
-            <div>
+            <div class="article-container">
                 <img class="img-catalogo" src="../img/ps5-removebg-preview.png" alt="playstation5">
-                <h6>Componentes</h6>
-                <ul>
+                <h6 class="compos">Componentes</h6>
+                <ul class="licontainer">
                     <li>
                         SSD personalizado de 825 GB
                     </li>
@@ -88,10 +90,10 @@
                 </ul>
                 <button class="boton-catalogo">Comprar</button>
             </div>
-            <div>
+            <div class="article-container">
                 <img class="img-catalogo" src="../img/logicam.png" alt="webcam">
-                <h6>Componentes</h6>
-                <ul>
+                <h6 class="compos">Componentes</h6>
+                <ul class="licontainer">
                     <li>
                         Resolución máxima: 1080p / 30fps
                     </li>
@@ -99,7 +101,7 @@
                         Tipo de enfoque: enfoque automático.
                     </li>
                     <li>
-                        Micrófono incorporado: estéreo, inegrado.
+                        Micrófono incorporado: estéreo, integrado.
                     </li>
                     <li>
                         Clip: Universal, integrado.
@@ -107,10 +109,10 @@
                 </ul>
                 <button class="boton-catalogo">Comprar</button>
             </div>
-            <div>
+            <div class="article-container">
                 <img class="img-catalogo" src="../img/Smart_watch-removebg-preview.png" alt="smartwatch">
-                <h6>Componentes</h6>
-                <ul>
+                <h6 class="compos">Componentes</h6>
+                <ul class="licontainer">
                     <li>
                         batería (de 205 mAh)
                     </li>
