--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -54,7 +54,7 @@
                 Nuestras sucursales
             </h2>
             <p class="sucursales-p">
-                Puedes encontrar nuestras distintas sucursales ubicadas por toda la provincia aqui!
+                Puedes encontrar nuestras distintas sucursales ubicadas por toda la provincia aquí!
             </p>
         </section>
         <div class="ubi-container">
@@ -90,7 +90,7 @@
         </div>
         <section class="relleno">
             <h5>No consigues ubicarte?</h5>
-            <p>Pruba comunicandote al (01011) 1122334455</p>
+            <p>Prueba comunicándote al (01011) 1122334455</p>
         </section>
     </main>
 
