--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -27,13 +27,13 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
+                    <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
+                    <a class="nav-link" href="../pages/catalogo.html">Catalogo</a>
                     <li class="nav-item">
                         <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
                       </li>
